CodeScanDemo-Salesforce/src/objects/UnfollowBatchJobsQueue__c.object
<CustomObject>
    <description>EDIT AT YOUR OWN RISK.  

This object is meant to handle the 5 concurrent batch apex jobs limit in Apex.  Each time the rules are queued up to run, each different object such as Opportunity or Case takes up one job from the limit.  If you have 6 objects, one won&apos;t be able to run at the same time as the others.

This queue stores the unrun job, and tries to schedule it at a later time, after the other jobs have finished.

This is not meant to ever be seen by users and should not be changed at risk of breaking the application.</description>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Stores the object who&apos;s rules are queued in here.</description>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>delayJob__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this job a job to process records scheduled for unfollow today by a rule executed a couple of days ago?</description>
        <label>delayJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delayRulesIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a job to queue up rules with daysDelay &gt; 0?</description>
        <label>delayRulesIncluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>evalateEachRecordForDaysDelay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines whether there are 2 or more individual DaysDelay values for the rules in this job. If only 1 day, then recordId&apos;s will all get the same DaysDelay value in the queue.  If more than 1, each record needs to be evaluated to see which DaysDelay value it should receive.</description>
        <label>evalateEachRecordForDaysDelay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numRulesUsedInThisObject__c</fullName>
        <description>Stores the # rules.  This will be used in the email confirmation once the job is done.</description>
        <label>numRulesUsedInThisObject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sObjectQuery__c</fullName>
        <description>This stores the SOQL for records to be unfollowed.</description>
        <label>sObjectQuery</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Chatter Unfollow Batch Job Queued</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Chatter Record Unfollow Batch Jobs Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Batch Jobs Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>